static/css/friends.css
:root {
  --theme-color: #0035fe;
  --main-font: 'Chivo', sans-serif;

  --main-background-color: #E7ECEF;
  --form-background-color: rgba(255, 255, 255, 0.7);
  --dimmed-background-color: #242f3e;
  --dimmed-secondary-color: #37475e;
  --retro-background-color: #dccfa9;
  --retro-secondary-color: #0075A2;

  --error-color: red;
  --warning-color: rgb(173, 110, 26);
  --success-color: rgb(3, 172, 3);

  --border-radius: 5px;

  --hover-scale: scale(1.02);

  --form-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

* {
  box-sizing: border-box;
  cursor: none !important;
}

/* Grouping Common Used Elements */

body, .container, .FrContainer {
  width: 100%;
}

body, .input-wrapper, .messages-wrapper, .remove, .accept {
  position: relative;
}

p, .icon-selector h3 {
  margin: 0;
}

p, .friends-section ul, .messages, .icon-selector h3 {
  padding: 0;
}

.icons-container, .home-label, .fPage, .container, .friends-section,
.requests-section, .requestsContainer, .FrContainer, .input-wrapper,
.friendsDiv, .color-selector{
  display: flex;
}

.fPage, .friends-section, .requests-section, .FrContainer, .friendsDiv {
  flex-direction: column;
}

.fPage, .home-label, .input-wrapper, .color-selector {
  align-items: center;
}

.container, .friends-section, .requestsContainer {
  height: 100%;
}

.home:hover, .home-label:hover img{
  transform: var(--hover-scale);
  opacity: 100%;
}

.friends-section ul, .messages {
  list-style-type: none;
}

.icon-selector, form input,.color-selector {
  background-color: var(--form-background-color);
}

.requestsContainer, .table th, .color-selector,
.color-selector select, .carousel-cell img,
.flickity-prev-next-button, #id_distance  {
  border-radius: var(--border-radius);
}

/* Body Themes */

body {
  overflow-x: hidden;
  font-family: var(--main-font);    
  height: 100vh;
  margin: 0;
  padding: 0;
  background-color: var(--main-background-color);
}

body.dimmed-mode {
  background-color: var(--dimmed-background-color);
}

body.dimmed-mode .requestsContainer, body.dimmed-mode .friends-section {
  background-color: var(--dimmed-secondary-color);
}

body.dimmed-mode h2 {
  color: #fca311;
}

body.dimmed-mode td, body.dimmed-mode th {
    color: #c8ccd1;
}

body.dimmed-mode .remove {
  color: rgb(209, 30, 30);
}

body.dimmed-mode .remove:hover {
  color: red;
}

body.dark-mode {
  background-color: #303030;
}

body.dark-mode .requestsContainer, body.dark-mode .friends-section {
  background-color: #4a4a4a;
}

body.dark-mode h2 {
  color: #eae7dd;
}

body.dimmed-mode td, body.dimmed-mode th {
  color: #000;
}


body.retro-mode {
  background-color: var(----retro-background-color);
}

body.retro-mode .requestsContainer, body.retro-mode .friends-section {
  background-color: #ebe3cd;
}

body.retro-mode h2 {
  color: var(--retro-secondary-color);
}

/* Cursor */

.circle {
  height: 15px;
  width: 15px;
  border-radius: 24px;
  background-color: black;
  position: fixed; 
  pointer-events: none;
  z-index: 99999999; /* so that it stays on top of all other elements */
}

/* Bottom Nav Bar */

.icons-container {
  bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
  gap: 5rem; 
  background-color: #0035fe;
  padding: 1rem 2rem 1rem 2rem;
  z-index: 2;
  border-radius: 25px;
}

.fPage{
  height: 2.5rem;
  width: 2.5rem;
}

 .home-label img {
  width: 2rem;
  height: 2rem;
  opacity: 75%;
  transition: 150ms ease-in-out;
}


p {
  opacity: 75%;
  font-size: .5rem;
  font-weight: 700;
  text-align: center;
  letter-spacing: 1px;
  font-family: var(--main-font);    
  text-transform: uppercase;
  padding: 0;
  margin: 0;
  color: #fff;
  padding-top: 0.1rem;
}

/* Main Body Container */

.container {
  color: #2b2d42;
  align-items: baseline;
}

/* Logo */

.home {
  opacity: 90%;
}

/* Current Friends Section */

.friends-section {
  padding-top: 100px;
  background-color: #edf2f4;
  padding-left: 1rem; 
  flex: 1; 
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.250); 
  max-width: 20%; 
  padding-right: 1rem;
}

.friends-section h2 {
  margin-top: 0.3rem;
}

h2 {
  margin-bottom: 0;
  font-weight: 200;
}

/* Friends Request Container */

.requests-section {
  padding-left: 2rem; 
  width: 80%;
  height: 80%;
}

.requestsContainer{
  background-color: rgba(255, 255, 255, 0.7); 
  width: 99%;
  justify-content: space-between;
  flex-direction: row;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.171); 
  margin-top: 10px;
}

.FrContainer:first-child {
  margin-left: 1rem;
}

/* Send Friend Req Form */

.input-wrapper {
  width: 350px; 
}

.friendsDiv form, .messages-wrapper{
  width: 50%;
}

form input, form input:focus {
  outline: none;
}

form input, form button, .input-wrapper {
  border: none;
}

form input {
  padding: 10px 20px 10px 10px;
  border-top-left-radius: var(--border-radius);
  border-bottom-left-radius: var(--border-radius);
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.171); 
}

form button {
  background: var(--theme-color);
  padding: 11px 20px; 
  color: #fff;
  border-top-right-radius: var(--border-radius);
  border-bottom-right-radius: var(--border-radius);
}

.input-wrapper input {
  width: 300px;
}

form button:hover {
  background: rgba(2, 52, 235, 0.827)
}

.messages {
  text-transform: lowercase;
  font-weight: 400;
  position: absolute;
  top: -2.5em; 
  right: 0;
  left: 0;
  z-index: 1;
  font-size: 0.75rem;
}

.friendsDiv{
  gap: 0.75rem;
}

.error {
  color: var(--error-color);
}

.warning {
  color: var(--warning-color);
}

.success {
  color: var(--success-color);
}

/* Friend Table (received/sent reqs) */

table {
  width: 99%;
  border-spacing: 0 10px;
  border-collapse: collapse;
}

table th, table td {
  text-align: left;
  padding: 4px 6px;
  padding-left: 0;
  font-weight: 200;
}

.friends-section table th:nth-of-type(even), .friends-section table th:last-of-type,
.friends-section table td:last-of-type {
  text-align: center;
}

table th {
  font-weight: 400;
}

table th:first-of-type{
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

table th:nth-of-type(2){
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

a {
 text-decoration: none;
}

.remove {
  color: rgb(179, 13, 13);
}

.remove, .accept {
  display: inline-block;
  transition: 100ms ease-in-out, color 0.3s ease; 
}

.accept {
  color: rgb(3, 172, 3);
  padding-right: 5px;
}

.accept:hover {
  color: rgb(6, 213, 6);
}

.remove:hover{
  color: red;
}

/* Forms */

.color-selector, .icon-selector, .icons-container {
  position: absolute;
}

.icon-selector {
  top: 10px;
}

.color-selector {
  height: 96px;
  width: 160px;
  padding: 3px 15px
}

.color-selector{
  flex-direction: column;
  right: 10px; 
  gap: 10px; 
  box-shadow: var(----form-shadow);
}

.color-selector {
  top: 10px;
}

.color-selector label {
  font-size: 0.9rem; 
  margin-right: 5px; 
}

#id_distance, .color-selector input {
  padding: 5px;
  font-size: 0.9rem; 
  border: 1px solid #ccc; 
  cursor: none;
}

#id_color {
  padding: 0;
  width: 120px !important;
  height: 3rem;
  border-radius: 5px;
  box-shadow: none;
}

.icon-selector {
  right: 175px;
  height: 96px;
  width: 550px;
  padding: 3px 15px; 
  border-radius: var(--border-radius);
  box-shadow: var(----form-shadow);
  transition: 100ms ease-in-out;
}

.icon-selector h3 {
  font-weight: 400;
  font-size: .9rem;
  color: #2b2d42;
  font-family: var(--main-font);
}

#distanceForm p label {
  display: none;
}

#distanceForm {
  margin: 0;
  padding: 0;
}


#id_distance{
  box-shadow: var(----form-shadow);
  width: 100px;
}

/* Icon Carousel */

.carousel-cell {
  height: 95%;
  margin-left: var(--border-radius);
  margin-right: var(--border-radius);
  overflow: hidden;
}

.carousel-cell img{
  width: 75px;
  height: 65px;
  transition: 100ms ease-in-out;
}

/* smaller, dark, rounded square */
.flickity-button {
  background: rgba(2, 52, 235, 0.827);
}
.flickity-button:hover {
  background: #0035fe;
}

.flickity-prev-next-button {
  top: 30px;
  width: 25px;
  height: 25px;
}
/* icon color */
.flickity-button-icon {
  fill: white;
}

/* remove dots */
.flickity-page-dots {
  display: none;
}

.is-selected img{
  border: 3px dashed black;
}

